--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Riya Testimonial</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex,nofollow" />
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
@@ -16,8 +17,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="riya-testimonial/css/normalize.css">
+  <link rel="stylesheet" href="riya-testimonial/css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -26,16 +27,7 @@
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-</body>
-
+  <script src="riya-testimonial/js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="riya-testimonial/js/plugins.js"></script>
+  <script src="riya-testimonial/js/main.js"></script>
 </html>
