--- a/index.html
+++ b/index.html
@@ -17,17 +17,52 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="riya-testimonial/css/normalize.css">
-  <link rel="stylesheet" href="riya-testimonial/css/main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
-
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="riya-testimonial/js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="riya-testimonial/js/plugins.js"></script>
-  <script src="riya-testimonial/js/main.js"></script>
+  <p>
+    I am thrilled to share my heartfelt testimonial for Riya, an exceptional software engineer whose dedication and
+    passion for leveraging technology for social good truly set her apart. Having had the pleasure of knowing Riya for
+    several years, I have witnessed her incredible journey at Wave Mobile Money and her commitment to making a
+    positive impact through her work.
+</p>
+<p>
+    Riya's impressive 4-year tenure at Wave Mobile Money speaks volumes about her technical prowess and leadership
+    capabilities. Starting as a Software Engineer, she quickly climbed the ranks, transitioning into the role of Tech
+    Lead, and eventually becoming a Senior Software Engineer. Her journey showcases her unwavering commitment to
+    personal growth and innovation within the industry.
+</p>
+<p>
+    Riya's current role involves developing software to support Wave Mobile Money's agent network, a critical
+    initiative aimed at creating financial infrastructure for the unbanked population in Sub-Saharan Africa. Her
+    dedication to this noble cause is truly inspiring, as she actively contributes to building a more inclusive and
+    equitable financial ecosystem.
+</p>
+<p>
+    Her journey began during her academic years at the University of Alberta, where she completed her Bachelor's in
+    Computer Software Engineering. Riya's commitment to excellence was evident even then, as she engaged in various
+    extracurricular activities, from hackathons to volunteer work, showcasing her well-rounded skill set and a desire
+    to make a difference.
+</p>
+<p>
+    Riya's impact goes beyond her professional accomplishments. Her volunteer experiences as VP of Student Life and
+    Associate Vice President of Events at the Engineering Students' Society highlight her exceptional leadership
+    abilities and commitment to fostering a sense of community. Creating opportunities for fellow students to engage
+    in charity work and volunteer experiences demonstrates her passion for giving back.
+</p>
+<p>
+    What truly stands out about Riya is her ability to blend technical expertise with a deep sense of social
+    responsibility. Her work at Wave Mobile Money, particularly in developing solutions for the unbanked population,
+    showcases her commitment to utilizing her skills for the betterment of society. Riya's journey is a testament to
+    her dedication, innovation, and unwavering belief in the power of technology to drive positive change. She is not
+    just a software engineer; she is a trailblazer on a mission to make the world a better place through her work. I
+    am confident that her journey is only the beginning of an incredible legacy of impact and inspiration.
+</p>
+  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
 </html>
