--- a/index.html
+++ b/index.html
@@ -6,63 +6,88 @@
   <title>Riya Testimonial</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="robots" content="noindex,nofollow" />
+  <meta name="robots" content="noindex,nofollow"/>
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
-  <p>
-    I am thrilled to share my heartfelt testimonial for Riya, an exceptional software engineer whose dedication and
-    passion for leveraging technology for social good truly set her apart. Having had the pleasure of knowing Riya for
-    several years, I have witnessed her incredible journey at Wave Mobile Money and her commitment to making a
-    positive impact through her work.
+<h1>Riya Testimonial</h1>
+<p>
+  I am thrilled to share my heartfelt testimonial for Riya, an exceptional software engineer whose dedication and
+  passion for leveraging technology for social good truly set her apart. Having had the pleasure of knowing Riya for
+  several years, I have witnessed her incredible journey at Wave Mobile Money and her commitment to making a
+  positive impact through her work.
 </p>
 <p>
-    Riya's impressive 4-year tenure at Wave Mobile Money speaks volumes about her technical prowess and leadership
-    capabilities. Starting as a Software Engineer, she quickly climbed the ranks, transitioning into the role of Tech
-    Lead, and eventually becoming a Senior Software Engineer. Her journey showcases her unwavering commitment to
-    personal growth and innovation within the industry.
+  Riya's impressive 4-year tenure at Wave Mobile Money speaks volumes about her technical prowess and leadership
+  capabilities. Starting as a Software Engineer, she quickly climbed the ranks, transitioning into the role of Tech
+  Lead, and eventually becoming a Senior Software Engineer. Her journey showcases her unwavering commitment to
+  personal growth and innovation within the industry.
 </p>
 <p>
-    Riya's current role involves developing software to support Wave Mobile Money's agent network, a critical
-    initiative aimed at creating financial infrastructure for the unbanked population in Sub-Saharan Africa. Her
-    dedication to this noble cause is truly inspiring, as she actively contributes to building a more inclusive and
-    equitable financial ecosystem.
+  Riya's current role involves developing software to support Wave Mobile Money's agent network, a critical
+  initiative aimed at creating financial infrastructure for the unbanked population in Sub-Saharan Africa. Her
+  dedication to this noble cause is truly inspiring, as she actively contributes to building a more inclusive and
+  equitable financial ecosystem.
 </p>
 <p>
-    Her journey began during her academic years at the University of Alberta, where she completed her Bachelor's in
-    Computer Software Engineering. Riya's commitment to excellence was evident even then, as she engaged in various
-    extracurricular activities, from hackathons to volunteer work, showcasing her well-rounded skill set and a desire
-    to make a difference.
+  Her journey began during her academic years at the University of Alberta, where she completed her Bachelor's in
+  Computer Software Engineering. Riya's commitment to excellence was evident even then, as she engaged in various
+  extracurricular activities, from hackathons to volunteer work, showcasing her well-rounded skill set and a desire
+  to make a difference.
 </p>
 <p>
-    Riya's impact goes beyond her professional accomplishments. Her volunteer experiences as VP of Student Life and
-    Associate Vice President of Events at the Engineering Students' Society highlight her exceptional leadership
-    abilities and commitment to fostering a sense of community. Creating opportunities for fellow students to engage
-    in charity work and volunteer experiences demonstrates her passion for giving back.
+  Riya's impact goes beyond her professional accomplishments. Her volunteer experiences as VP of Student Life and
+  Associate Vice President of Events at the Engineering Students' Society highlight her exceptional leadership
+  abilities and commitment to fostering a sense of community. Creating opportunities for fellow students to engage
+  in charity work and volunteer experiences demonstrates her passion for giving back.
 </p>
 <p>
-    What truly stands out about Riya is her ability to blend technical expertise with a deep sense of social
-    responsibility. Her work at Wave Mobile Money, particularly in developing solutions for the unbanked population,
-    showcases her commitment to utilizing her skills for the betterment of society. Riya's journey is a testament to
-    her dedication, innovation, and unwavering belief in the power of technology to drive positive change. She is not
-    just a software engineer; she is a trailblazer on a mission to make the world a better place through her work. I
-    am confident that her journey is only the beginning of an incredible legacy of impact and inspiration.
+  What truly stands out about Riya is her ability to blend technical expertise with a deep sense of social
+  responsibility. Her work at Wave Mobile Money, particularly in developing solutions for the unbanked population,
+  showcases her commitment to utilizing her skills for the betterment of society. Riya's journey is a testament to
+  her dedication, innovation, and unwavering belief in the power of technology to drive positive change. She is not
+  just a software engineer; she is a trailblazer on a mission to make the world a better place through her work. I
+  am confident that her journey is only the beginning of an incredible legacy of impact and inspiration. In fact, I can
+  recall a specific time when Riya's resounding belief in technology was made evident, when she thought she could
+  lock our front door by saying "Okay Google, lock".
 </p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+<p>
+  Riya is not only a remarkable professional but also a genuinely good person. Her great wit and quick thinking bring
+  joy to those around her, and while she may not be as fast as me, her determination and drive are truly
+  commendable. It's also fascinating to know that she enjoys clothes made out of neoprene, showcasing her unique style
+  and interests. Additionally, Riya boasts a bottomless pit of a stomach and an undeniable love for food, which adds to
+  her delightful and multifaceted personality.
+</p>
+<p>
+  Yours truly,<br/><br/>
+  <b>Luke Kysow</b><br/>
+  Principal Engineer at HashiCorp<br/>
+  Author of Consul Up & Running<br/>
+  Co-creator of Atlantis<br/>
+  Ex-manager at Hootsuite<br>
+  Ex-team lead at EA<br/>
+  Brother-in-law of Riya<br/>
+</p>
+<ul>
+  <li><a href="yeg.html">YEG</a></li>
+  <li><a href="yeg.html">YEG</a></li>
+</ul>
+<script src="js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>
+</body>
 </html>
