--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </p>
 <ul>
   <li><a href="yeg.html">YEG</a></li>
-  <li><a href="yeg.html">YEG</a></li>
+  <li><a href="genz.html">Gen Z</a></li>
 </ul>
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
