--- a/genz.html
+++ b/genz.html
@@ -24,10 +24,10 @@
 </head>
 
 <body>
-<h1>YEG</h1>
+<h1>Gen Z</h1>
 <p>
-  Riya is a huge fan of the YEG and hopes to one day return. As someone without a license she relishes the chance to take
-  the long way round (via bus or train) or walk, in order to work off some of the tacos she's just ate.
+  Riya is like, absolutely vibing with the slang scene – she's flexing those Gen Z feels to the max. She's all 'bout
+  staying woke and thinks she's keeping it on fleek, even though she's 27. Seriously, she's the definition of fire.
 </p>
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
